# nagini

./: .gitignore  .gitmodules  .hgignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.rst  action.yaml  analyzer.py  astpp.py  bltns.py  buildout.cfg  constants.py  entrypoint.sh  jpypeaccess.py  jvmaccess.py  main.py  main_ide.py  pyproject.toml  requirements.txt  setup.py  test.py  test_thread_1.py  test_thread_2.py  testing.py  testinput.sil  tests.py  translator.py  type_domain_factory.py  typeinfo.py  umm.py  util.py  verifier.py  versions.cfg  viper_ast.py
benchmarks/: associative_list.py  basic_equality.py  basic_equality_2F.py  basic_equality_3F.py  basic_equality_collections.py  basic_equality_list_2.py  basic_reflexive.py  basic_symmetric.py  basic_transitive.py  birds.py  count_loc.py  generate_scalability_test.py  hash_test.py  less_than_test.py  scalability.py  scalability_A_to_H.py  scalability_A_to_O.py  scalability_A_to_Z_to_C5.py  scalability_merge.py  test_symmetric_adv.py
evaluation/: interactivepython_bst.py  keon_knapsack.py  parkinson_recell.py  rosetta_quicksort.py  wikipedia_duck_typing.py
evaluation_paper/: associative_list.py  fraction_int.py  hash_test_multiple_fields.py  point.py  stateless.py  string.py
python_sandbox/: evaluation.ipynb  evaluation.pkl  getattribute_and_setattr.py  mro_stuff.py  mro_stuff_sanity_check.py  mypy_mro_stuff.py  mypy_mro_stuff_2.py  mypy_mro_stuff_3.py  mypy_mro_stuff_4.py  mypy_mro_stuff_5.py  mypy_mro_stuff_6.py
tests/: test_thread_1.py  test_thread_2.py  thread_2_expected_result.sil
(+1709 files in other folders)
